--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "fastapi>=0.104.1",
     "uvicorn[standard]>=0.24.0.post1",
+    "sqlitedict>=2.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
