--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,7 @@ description = "Add your description here"
 authors = [
     { name = "am230", email = "111672334+am230@users.noreply.github.com" }
 ]
-dependencies = [
-    "sqlitedict>=2.1.0",
-]
+dependencies = []
 readme = "README.md"
 requires-python = ">= 3.12"
 
