--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 authors = [
     { name = "am230", email = "111672334+am230@users.noreply.github.com" }
 ]
-dependencies = []
+dependencies = [
+    "aiohttp>=3.9.1",
+]
 readme = "README.md"
 requires-python = ">= 3.12"
 
