--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "aiohttp>=3.9.1",
+    "sqlitedict>=2.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
